--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
       
     /* "transparent" only works here because == rgba(0,0,0,0) */
   }
-  iframe{
+  video{
     width:100%;
     height: 100vh;
   }
